//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Yama" {
  database_type: 'postgresql'
  Note: ''
}

Table users {
  id String [pk]
  username String [unique, not null]
  email String [unique]
  phone String [unique]
  password String [not null]
  Transaction transaction [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table categories {
  id String [pk]
  category_name String [unique, not null]
  Product products [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table products {
  id String [pk]
  product_code String [not null]
  product_name String [not null]
  purchase_price Int [default: 0]
  category_id String
  Category categories
  unit_id String
  Unit units
  Instock instock [not null]
  ProductPriceList product_price_list [not null]
  Composite composite [not null]
  inStockOnProduct instock_on_product [not null]
  SaleItem sale_items [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table prices {
  id String [pk]
  name String [not null]
  Customer customers [not null]
  ProductPriceList product_price_list [not null]
  CompositePriceList composite_price_list [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table product_price_list {
  id String [pk]
  amount Float [not null]
  product_id String [not null]
  Product products [not null]
  price_id String [not null]
  Price prices [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  SaleItem sale_items [not null]
}

Table composite {
  id String [pk]
  name String [not null]
  per_unit Float [not null]
  product_id String [not null]
  Product products [not null]
  unit_id String [not null]
  Unit units [not null]
  CompositePriceList composite_price_list [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table composite_price_list {
  id String [pk]
  amount Float [not null]
  composite_id String [not null]
  Composite composite [not null]
  price_id String [not null]
  Price prices [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table units {
  id String [pk]
  unit_name String [unique, not null]
  Product products [not null]
  Composite composite [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table suppliers {
  id String [pk]
  supplier_name String [not null]
  short_name String
  address String
  phone String
  InStockVoucher instock_voucher [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table customers {
  id String [pk]
  customer_name String [not null]
  short_name String
  address String
  phone String
  pirce_id String
  pirce prices
  balance Float [default: 0]
  credit Float [default: 0]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  SaleVoucher sale_voucher [not null]
}

Table warehouses {
  id String [pk]
  warehouse_name String [not null]
  InStockVoucher instock_voucher [not null]
  inStockOnProduct instock_on_product [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table instock_voucher {
  id String [pk]
  voucher_no Int [increment, unique, not null]
  discount Float
  total Float
  grand_total Float
  round_adjustment Float
  balance Float [not null, default: 0]
  supplier_id String [not null]
  Supplier suppliers [not null]
  voucher_status Voucher_Status
  warehouse_id String [not null]
  Warehouse warehouses [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  Transaction transaction [not null]
  Instock instock [not null]
}

Table instock {
  id String [pk]
  total_quantity Int [not null]
  foc Int [default: 0]
  discount_on_item Int [default: 0]
  total_amount Float [not null]
  instock_voucher_id String [not null]
  InstockVoucher instock_voucher [not null]
  product_id String [not null]
  Product products [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table instock_on_product {
  id String [pk]
  warehouse_id String [not null]
  Warehouse warehouses [not null]
  quantity Int [not null]
  product_id String [not null]
  Product products [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table sale_voucher {
  id String [pk]
  voucher_no Int [increment, unique, not null]
  discount Float
  grand_total Float
  total Float
  round_adjustment Float
  balance Float [not null, default: 0]
  customer_id String [not null]
  Customer customers [not null]
  voucher_status Voucher_Status
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  Transaction transaction [not null]
  SaleItem sale_items [not null]
  SaleTransaction sale_transactions [not null]
}

Table sale_transactions {
  id String [pk]
  sale_voucher_id String [not null]
  SaleVoucher sale_voucher [not null]
  amount Float [not null, default: 0]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table sale_items {
  id String [pk]
  total_quantity Int [not null]
  total_amount Float [not null]
  sale_voucher_id String [not null]
  SaleVoucher sale_voucher [not null]
  product_id String [not null]
  Product products [not null]
  product_price_id String
  ProductPriceList product_price_list
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table transaction {
  id String [pk]
  paid Float [not null]
  balance Float [not null]
  remark String
  total Float [not null]
  issued_by_id String
  Issued_By users
  instock_voucher_id String
  InStockVoucher instock_voucher
  payment_method_id String
  Payment_method payment_methods
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  SaleVoucher sale_voucher
  sale_voucher_id String
}

Table payment_methods {
  id String [pk]
  name String [unique, not null]
  Transaction transaction [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Enum Voucher_Status {
  done
  remainder
}

Ref: products.category_id > categories.id [delete: Cascade]

Ref: products.unit_id > units.id [delete: Cascade]

Ref: product_price_list.product_id > products.id [delete: Cascade]

Ref: product_price_list.price_id > prices.id [delete: Cascade]

Ref: composite.product_id > products.id [delete: Cascade]

Ref: composite.unit_id > units.id [delete: Cascade]

Ref: composite_price_list.composite_id > composite.id [delete: Cascade]

Ref: composite_price_list.price_id > prices.id [delete: Cascade]

Ref: customers.pirce_id > prices.id

Ref: instock_voucher.supplier_id > suppliers.id [delete: Cascade]

Ref: instock_voucher.warehouse_id > warehouses.id [delete: Cascade]

Ref: instock.instock_voucher_id > instock_voucher.id [delete: Cascade]

Ref: instock.product_id > products.id [delete: Cascade]

Ref: instock_on_product.warehouse_id > warehouses.id [delete: Cascade]

Ref: instock_on_product.product_id > products.id [delete: Cascade]

Ref: sale_voucher.customer_id > customers.id [delete: Cascade]

Ref: sale_transactions.sale_voucher_id > sale_voucher.id [delete: Cascade]

Ref: sale_items.sale_voucher_id > sale_voucher.id [delete: Cascade]

Ref: sale_items.product_id > products.id [delete: Cascade]

Ref: sale_items.product_price_id > product_price_list.id [delete: Cascade]

Ref: transaction.issued_by_id > users.id [delete: Cascade]

Ref: transaction.instock_voucher_id > instock_voucher.id [delete: Cascade]

Ref: transaction.payment_method_id > payment_methods.id [delete: Cascade]

Ref: transaction.sale_voucher_id > sale_voucher.id [delete: Cascade]